KAS-4283 change link for helpdesk mail to externalLink

--- a/app/components/m-header.hbs
+++ b/app/components/m-header.hbs
@@ -100,7 +100,7 @@
             {{t "screencast-digital-signing"}}
           </AuLinkExternal>
           <AuHr />
-          <AuLink
+          <AuLinkExternal
             href="mailto:kaleidos.servicedesk@vlaanderen.be"
             target="_blank"
             role="menuitem"
@@ -109,7 +109,7 @@
             <span class="auk-u-text-muted auk-u-text-size--small">
               {{t "email-servicedesk"}}
             </span>
-          </AuLink>
+          </AuLinkExternal>
         </AuDropdown>
       </Auk::Toolbar::Item>
       <Auk::Toolbar::Item>
