--- a/app/components/publications/publication/proofs/proof-received-panel.hbs
+++ b/app/components/publications/publication/proofs/proof-received-panel.hbs
@@ -67,7 +67,7 @@
     />
     <Auk::Modal::Body>
       <div class="au-c-form">
-        <AuFormRow class="auk-u-position-relative">
+        <AuFormRow>
           <Auk::Label for="proofUploadReceivedDate" @required={{true}}>
             {{t "date"}}
           </Auk::Label>
