--- a/app/components/publications/publication/publication-activities/publication-registration-modal.hbs
+++ b/app/components/publications/publication/publication-activities/publication-registration-modal.hbs
@@ -6,7 +6,7 @@
   />
   <Auk::Modal::Body>
     <div class="au-c-form">
-      <AuFormRow class="auk-u-position-relative" data-test-publication-registration-publication-date>
+      <AuFormRow data-test-publication-registration-publication-date>
         <Auk::Label for="publicationRegisterModal_publicationDate">
           {{t "date"}}
         </Auk::Label>
