--- a/app/components/publications/publication/publication-activities/publications-info-panel.hbs
+++ b/app/components/publications/publication/publication-activities/publications-info-panel.hbs
@@ -30,7 +30,7 @@
       <div class="au-c-form">
         <div class="auk-o-grid">
           <div class="auk-o-grid-col-3">
-            <AuFormRow class="auk-u-position-relative" data-test-publications-info-panel-edit-view-target-end-date>
+            <AuFormRow data-test-publications-info-panel-edit-view-target-end-date>
               <Auk::Label>{{t "publication-target-end-date"}}</Auk::Label>
               <Auk::Datepicker
                 @date={{@publicationSubcase.targetEndDate}}
@@ -51,7 +51,7 @@
             </AuFormRow>
           </div>
           <div class="auk-o-grid-col-3">
-            <AuFormRow class="auk-u-position-relative">
+            <AuFormRow>
               <Auk::Label>
                 {{t "publication-date"}}
               </Auk::Label>
