--- a/app/components/publications/publication/translations/translation-activity-edit-modal.hbs
+++ b/app/components/publications/publication/translations/translation-activity-edit-modal.hbs
@@ -5,7 +5,7 @@
   />
   <Auk::Modal::Body>
     <div class="au-c-form">
-      <AuFormRow class="auk-u-position-relative">
+      <AuFormRow>
         <Auk::Label for="translationActivityEditEndDate">
           {{t "date-received"}}
         </Auk::Label>
