--- a/app/components/publications/publication/translations/translation-request-modal.hbs
+++ b/app/components/publications/publication/translations/translation-request-modal.hbs
@@ -10,7 +10,7 @@
   />
   <Auk::Modal::Body>
     <div class="au-c-form">
-      <AuFormRow class="auk-u-position-relative auk-u-max-width-medium">
+      <AuFormRow class="auk-u-max-width-medium">
         <Auk::Label for="translationRequestDueDate" @required={{true}}>
           {{t "publication-flow-translation-due-date"}}
         </Auk::Label>
