--- a/app/components/meeting/edit-meeting-modal.hbs
+++ b/app/components/meeting/edit-meeting-modal.hbs
@@ -34,7 +34,7 @@
           </Utils::ModelSelector>
         </AuFormRow>
       {{else}}
-        <AuFormRow class="auk-u-position-relative" data-test-edit-meeting-datepicker>
+        <AuFormRow data-test-edit-meeting-datepicker>
           <Auk::Label>{{t "start-date"}}</Auk::Label>
           <Auk::Datepicker
             @enableTime={{true}}
@@ -44,7 +44,7 @@
         </AuFormRow>
       {{/if}}
       {{!Publicatiedatum}}
-      <AuFormRow class="auk-u-position-relative" data-test-edit-meeting-document-publication-date>
+      <AuFormRow data-test-edit-meeting-document-publication-date>
         <Auk::Label>
           {{t "date-publication-documents"}}
         </Auk::Label>
