--- a/app/components/publications/publication/proofs/proof-info-panel.hbs
+++ b/app/components/publications/publication/proofs/proof-info-panel.hbs
@@ -30,7 +30,7 @@
       <div class="au-c-form">
         <div class="auk-o-grid">
           <div class="auk-o-grid-col-3">
-            <AuFormRow class="auk-u-position-relative" data-test-proof-info-panel-edit-due-date>
+            <AuFormRow data-test-proof-info-panel-edit-due-date>
               <Auk::Label>{{t "publication-flow-publication-due-date"}}</Auk::Label>
               <Auk::Datepicker
                 @date={{@publicationSubcase.dueDate}}
