--- a/app/components/utils/system-alert-form.hbs
+++ b/app/components/utils/system-alert-form.hbs
@@ -1,5 +1,5 @@
 <div class="au-c-form">
-  <AuFormRow class="auk-u-position-relative" data-test-system-alert-form-from-date>
+  <AuFormRow data-test-system-alert-form-from-date>
     <Auk::Label>{{t "start-date"}}</Auk::Label>
     <Auk::Datepicker
       @enableTime={{true}}
@@ -7,7 +7,7 @@
       @onChange={{this.selectBeginDate}}
     />
   </AuFormRow>
-  <AuFormRow class="auk-u-position-relative">
+  <AuFormRow>
     <Auk::Label>{{t "end-date"}}</Auk::Label>
     <Auk::Datepicker
       @enableTime={{true}}
