--- a/app/templates/settings/users/index.hbs
+++ b/app/templates/settings/users/index.hbs
@@ -14,7 +14,7 @@
       <div class="au-c-card au-o-box au-o-box--small">
         <div class="au-c-form">
           <Auk::Label class="au-u-padding-bottom-none">{{t "filter-on-last-seen"}}</Auk::Label>
-          <AuFormRow data-test-route-settings-user-date-from class="auk-u-position-relative au-u-margin-top-tiny">
+          <AuFormRow data-test-route-settings-user-date-from class="au-u-margin-top-tiny">
             <Auk::Label>{{t "from"}}</Auk::Label>
             <Auk::Datepicker
               @date={{this.dateFromBuffer}}
@@ -24,7 +24,7 @@
               class="auk-u-maximize-width"
             />
           </AuFormRow>
-          <AuFormRow data-test-route-settings-user-date-to class="auk-u-position-relative au-u-margin-top-small">
+          <AuFormRow data-test-route-settings-user-date-to class="au-u-margin-top-small">
             <Auk::Label>{{t "until-inclusive"}}</Auk::Label>
             <Auk::Datepicker
               @date={{this.dateToBuffer}}
