feat: show meeting date in signature.ongoing-decisions

--- a/app/templates/signatures/ongoing-decisions.hbs
+++ b/app/templates/signatures/ongoing-decisions.hbs
@@ -69,7 +69,7 @@
             </td>
           {{/let}}
           <td>
-            {{date signFlow.decisionActivity.startDate}}
+            {{date (await (this.getMeetingDate signFlow))}}
           </td>
           <td>
             <SignaturePill
