--- a/app/components/cases/edit-case.hbs
+++ b/app/components/cases/edit-case.hbs
@@ -1,5 +1,9 @@
 <Auk::Modal>
-  <Auk::Modal::Header @title={{t "edit-case"}} @onClose={{this.close}} />
+  <Auk::Modal::Header
+    @closeDisabled={{this.save.isRunning}}
+    @title={{t "edit-case"}}
+    @onClose={{this.close}}
+  />
   <Auk::Modal::Body>
     <div class="auk-form-group">
       <Auk::Label>{{t "short-title-case"}}</Auk::Label>
