--- a/app/components/publications/publication/proofs/proof-received-panel.hbs
+++ b/app/components/publications/publication/proofs/proof-received-panel.hbs
@@ -64,6 +64,7 @@
     <Auk::Modal::Header
       @title={{t "edit-proof"}}
       @onClose={{this.closeEditProofModal}}
+      @closeDisabled={{this.save.isRunning}}
     />
     <Auk::Modal::Body>
       <div class="auk-form-group">
