--- a/app/components/publications/publication/translations/translation-activity-edit-modal.hbs
+++ b/app/components/publications/publication/translations/translation-activity-edit-modal.hbs
@@ -2,6 +2,7 @@
   <Auk::Modal::Header
     @title={{t "edit-translation-activity"}}
     @onClose={{@onCancel}}
+    @closeDisabled={{this.save.isRunning}}
   />
   <Auk::Modal::Body>
     <div class="auk-form-group">
