chore: add digital-signing error message to toast

--- a/app/components/utils/toaster.hbs
+++ b/app/components/utils/toaster.hbs
@@ -14,6 +14,13 @@
           @message={{toast.message}}
           @options={{toast.options}}
         />
+      {{else if (eq toast.type "copy-error-to-clipboard")}}
+        <Utils::Toaster::CopyErrorToClipboardToast
+          @title={{toast.title}}
+          @message={{toast.message}}
+          @errorContent={{toast.errorContent}}
+          @options={{toast.options}}
+        />
       {{else}}
         <Utils::Toaster::Toast
           @type={{toast.options.type}}
