--- a/app/styles/print/_general.scss
+++ b/app/styles/print/_general.scss
@@ -29,10 +29,6 @@
   /* Auk overrides
    ========================================================================== */
 
-  .au-c-button {
-    display: none;
-  }
-
   .auk-sidebar {
     display: none;
   }
@@ -63,10 +59,6 @@
     display: block;
   }
 
-  .auk-alert-stack {
-    display: none;
-  }
-
   // Fix an issue which causes Firefox to only print a single page
   .auk-scroll-wrapper {
     display: block;
@@ -74,6 +66,17 @@
 
   .auk-u-maximize-height {
     height: auto !important;
+  }
+
+  /* Appuniversum overrides
+   ========================================================================== */
+
+  .au-c-button {
+    display: none;
+  }
+
+  .au-c-toaster {
+    display: none;
   }
 }
 
