KAS-4262 Remove form-group element & references from styleguide docs

--- a/app/templates/styleguide/panel.hbs
+++ b/app/templates/styleguide/panel.hbs
@@ -169,13 +169,15 @@
       <h4 class="auk-panel__title">Panel title</h4>
     </Auk::Panel::Header>
     <Auk::Panel::Body>
-      <div class="auk-form-group">
-        <Auk::Label>Label</Auk::Label>
-        <textarea class="auk-textarea" rows="2"></textarea>
-      </div>
-      <div class="auk-form-group">
-        <Auk::Label>Label</Auk::Label>
-        <textarea class="auk-textarea" rows="4"></textarea>
+      <div class="au-c-form">
+        <AuFormRow>
+          <Auk::Label>Label</Auk::Label>
+          <textarea class="auk-textarea" rows="2"></textarea>
+        </AuFormRow>
+        <AuFormRow>
+          <Auk::Label>Label</Auk::Label>
+          <textarea class="auk-textarea" rows="4"></textarea>
+        </AuFormRow>
       </div>
     </Auk::Panel::Body>
     <Auk::Panel::Footer>
