--- a/app/components/documents/document-preview/signatures-tab.hbs
+++ b/app/components/documents/document-preview/signatures-tab.hbs
@@ -28,11 +28,12 @@
       {{#if this.decisionActivity}}
         <AuToggleSwitch
           @skin="primary"
-          @label={{t "present-for-signing"}}
           @checked={{this.hasMarkedSignFlow}}
           @onChange={{fn this.markForSignFlow.perform}}
           @disabled={{this.markForSignFlow.isRunning}}
-        />
+        >
+          {{t "present-for-signing"}}
+        </AuToggleSwitch>
       {{else}}
         <AuAlert @skin="warning" @icon="alert-triangle" @title={{t "cannot-sign"}}>
           <p>{{t "cannot-sign-because-no-decision-activity"}}</p>
