KAS-4281 Change vertical alignment of secretary select dropdown to top

--- a/app/components/mandatees/mandatee-selector/default.hbs
+++ b/app/components/mandatees/mandatee-selector/default.hbs
@@ -8,6 +8,7 @@
     @disabled={{@disabled}}
     @closeOnSelect={{false}}
     @searchEnabled={{true}}
+    @verticalPosition={{this.dropdownAlignment}}
     @onChange={{@onSelectMandatee}}
     as |mandatee|
   >
@@ -22,6 +23,7 @@
     @selected={{@selectedMandatees}}
     @disabled={{@disabled}}
     @searchEnabled={{true}}
+    @verticalPosition={{this.dropdownAlignment}}
     @onChange={{@onSelectMandatee}}
     as |mandatee|
   >
