--- a/app/components/mandatees/mandatee-selector/open-search.hbs
+++ b/app/components/mandatees/mandatee-selector/open-search.hbs
@@ -9,6 +9,7 @@
     @closeOnSelect={{false}}
     @searchEnabled={{true}}
     @search={{perform this.searchMandatee}}
+    @verticalPosition={{this.dropdownAlignment}}
     @onChange={{@onSelectMandatee}}
     as |mandatee|
   >
@@ -25,6 +26,7 @@
     @disabled={{@disabled}}
     @searchEnabled={{true}}
     @search={{perform this.searchMandatee}}
+    @verticalPosition={{this.dropdownAlignment}}
     @onChange={{@onSelectMandatee}}
     as |mandatee|
   >
