--- a/app/components/mandatees/secretary-panel/edit.hbs
+++ b/app/components/mandatees/secretary-panel/edit.hbs
@@ -13,6 +13,7 @@
       @onSelectMandatee={{fn (mut this.secretary)}}
       @selectedMandatees={{this.selectedSecretary}}
       @visibleRoles={{this.visibleRoles}}
+      @dropdownAlignment="top"
     />
   </Auk::Panel::Body>
   <Auk::Panel::Footer>
