--- a/app/components/mandatees/mandatee-selector.hbs
+++ b/app/components/mandatees/mandatee-selector.hbs
@@ -6,6 +6,7 @@
       @referenceDate={{@referenceDate}}
       @onSelectMandatee={{@onSelectMandatee}}
       @selectedMandatees={{@selectedMandatees}}
+      @dropdownAlignment={{@dropdownAlignment}}
     />
   {{else}}
     <Mandatees::MandateeSelector::Default
@@ -14,6 +15,7 @@
       @referenceDate={{@referenceDate}}
       @onSelectMandatee={{@onSelectMandatee}}
       @selectedMandatees={{@selectedMandatees}}
+      @dropdownAlignment={{@dropdownAlignment}}
       @visibleRoles={{@visibleRoles}}
     />
   {{/if}}
