--- a/app/components/publications/publication/translations/translation-activity-edit-modal.hbs
+++ b/app/components/publications/publication/translations/translation-activity-edit-modal.hbs
@@ -18,7 +18,7 @@
       </AuFormRow>
     </div>
   </Auk::Modal::Body>
-  <Auk::Modal::Footer @onCancel={{@onCancel}}>
+  <Auk::Modal::Footer @onCancel={{@onCancel}} @cancelDisabled={{this.save.isRunning}}>
     <AuButton
       data-test-translation-activity-edit-save
       @skin="primary"
