use correct param in modal footer

--- a/app/components/mandatees/mandatees-selector-modal.hbs
+++ b/app/components/mandatees/mandatees-selector-modal.hbs
@@ -31,7 +31,7 @@
       />
     </Utils::LoadableContent>
   </Auk::Modal::Body>
-  <Auk::Modal::Footer @onCancel={{@onClose}} @closeDisabled={{this.onAdd.isRunning}}>
+  <Auk::Modal::Footer @onCancel={{@onClose}} @cancelDisabled={{this.onAdd.isRunning}}>
     <AuButton
       data-test-mandatees-selector-add
       @skin="primary"
